maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:16: error: illegal start of simple expression
  if ( estFaceMur() && isDirectionFree2Direction.EST) ){
                                                      ^